_sass/components/modal.scss
/* The Modal (background) */
/* Modal Content/Box */
/* The Close Button */
.case-study-modal {
	display: none;
	position: fixed;
	z-index: 1;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	overflow: auto;
	background: #FFFFFFFA;
	box-shadow: 0px 4px 4px 0px #00000040;
}
.modal-side-bar {
	display: block;
	position: fixed;
	top: 0;
	left: 0;
	height: 100%;
	width: 40px;
	background: linear-gradient(180deg, #63BBB0 0%, #F9DF52 100%);
}
.modal-content {
	display: flex;
	align-items: center;
	align-content: center;
	justify-content: space-around;
	margin-left: 40px;
	padding: 50px;
}
.modal-case-study-details {
	max-width: 48%;
	display: flex;
	flex-direction: column;
	gap: 32px;
	h2 {
		font-size: 32px;
		font-weight: 700;
		color: $black;
	}
	p {
		color: $black;
		font-size: 18px;
	}
	p.overview {
		font-size: 28px;
		font-weight: 450;
	}
	h5 {
		color: $black;
		font-size: 16px;
		font-weight: 700;
		text-transform: uppercase;
	}
	ul {
		padding-left: 20px;
		list-style-type: disc;
		color: $black;
		font-size: 18px;
		font-weight: 450;
	}
}
.modal-sub-container {
	display: flex;
	flex-direction: column;
	gap: 16px;
	&:first-child {
		gap: 24px;
	}
}
.button-container {
	width: 257px;
	height: 58px;
	border-radius: 6px;
	background-color: $black;
	padding: 8px 40px;
	a {
		color: $white;
		font-size: 18px;
		font-weight: 450;
		text-align: center;
		vertical-align: baseline;
	}
}
.modal-logo {
	max-width: 45%;
}
.modal-picture-container {
	&::after {
		content: ' ';
		display: table;
		clear: both;
	}
}
.modal-overlapping-picture-first {
	// max-width: 325px;
	float: left;
	width: 75%;
}
.modal-overlapping-picture-second {
	// max-width: 440px;
	// z-index: 2;
	float: right;
	width: 66%;
	margin-right: -100%;
	padding-top: 15%;
	// arbitrary position: relative;
	z-index: 1;
}
.modal-close {
	align-self: start;
	color: $black;
	float: right;
	font-size: 28px;
	font-weight: bold;
}

